# yor-scraper

./: .gitignore  README.md  pyproject.toml
yor_scraper/: __main__.py  global_voices_scraper.py  links.py  local_test_scraper.py  network_test_scraper.py  website_data.py
yor_scraper/test_data_output/: job_1.txt  job_13.txt  job_14.txt  job_15.txt  job_16.txt  job_17.txt  job_18.txt  job_19.txt  job_20.txt  job_21.txt  job_22.txt  job_23.txt  job_24.txt  job_25.txt  job_3.txt  job_4.txt  job_5.txt  job_6.txt  job_7.txt  job_9.txt
yor_scraper/yor_data_output/: africa_page.csv  americas_and_carribean_page.csv  arts_and_culture_page.csv  asia_page.csv  breaking_news_page.csv  censorship_page.csv  development_page.csv  digital_activism_page.csv  disaster_page.csv  education_page.csv  elections_page.csv  environment_page.csv  ethinicity_race_page.csv  europe_page.csv  freedom_of_speech_page.csv  good_news_page.csv  governance_page.csv  health_page.csv  home_page.csv  human_rights_page.csv  humantarian_page.csv  humor_page.csv  ideas_page.csv  indigenous_page.csv  international_relations_page.csv  labor_page.csv  language_page.csv  law_page.csv  lgbt_page.csv  media_journalism_page.csv  middle_east_and_north_africa_page.csv  migration_immigration_page.csv  music_page.csv  photography_page.csv  politics_page.csv  protest_page.csv  refugees_page.csv  religion_page.csv  science_page.csv  sport_page.csv  (+5 more)
