[tool.poetry]
name = "yor-scraper"
version = "0.1.0"
description = "An application for scraping data from a website"
authors = ["DeleMike <akindelemichael65@gmail.com>"]
readme = "README.md"
packages = [{include = "yor_scraper"}]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
